[package]
name = "override-tool"
version = "1.0.0"
edition = "2021"
description = "Secure file-destruction tool (shred-like) with crypto-shredding, configurable pipelines, and self-resilience."
license = "MIT"
readme = "README.md"

# The package name cannot be `override` (a Rust reserved keyword rejected by
# crates.io/cargo), so the package is `override-tool` while the produced binary
# is named `override` as required by the spec.
[[bin]]
name = "override"
path = "src/main.rs"

[lib]
name = "override_tool"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chacha20poly1305 = { version = "0.10", features = ["stream"] }
rand = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }
walkdir = "2"
nix = { version = "0.29", features = ["fs", "process", "signal", "feature"] }
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
